fix text bug on mobile at lessons

--- a/view/screens/lessons/first_steps.kv
+++ b/view/screens/lessons/first_steps.kv
@@ -3,8 +3,9 @@
 
     MDBoxLayout:
         height: root.height - toolbar.height
+        size_hint_y: None
         orientation: 'vertical'
-        size_hint_y: 0.9 # FIXME. text bug on mobile
+        #size_hint_y: 0.9 # FIXME. text bug on mobile
 
         M3ScrollView:
 
