--- a/view/screens/lessons/first_steps.kv
+++ b/view/screens/lessons/first_steps.kv
@@ -5,7 +5,6 @@
         height: root.height - toolbar.height
         size_hint_y: None
         orientation: 'vertical'
-        #size_hint_y: 0.9 # FIXME. text bug on mobile
 
         M3ScrollView:
 
@@ -18,13 +17,10 @@
 
                 ZoomingImage:
                     source: app.path_to("view", "images", "random", ext=".jpg")
-                    size: self.texture_size
-                    padding: 0, 0
-                    size_hint_y: None #!REQUIRED
                     
                 M3Label:
                     text: "text![] "*10
 
     M3TopAppBar:
         id: toolbar
-        size_hint_y: None
+        #size_hint_y: None
