--- a/view/widgets/imagecontainer/imagecontainer.kv
+++ b/view/widgets/imagecontainer/imagecontainer.kv
@@ -1,3 +1,8 @@
+<ZoomingImage>
+    size: self.texture_size
+    size_hint_y: None
+
+
 <ZoomingImageScreen>
     BoxLayout:
         size_hint_y: 0.9
