--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -17,8 +17,8 @@
 <M3TopAppBar@MDTopAppBar>
     md_bg_color: app.theme_cls.bg_light
     #size: (app.window.size[0], app.window.size[1] / 10+sp(20))
-    anchor_title: "left"
-    #title: "KivyMDbook"
+    #anchor_title: "left"
+    size_hint_y: None
     elevation: 5
     shadow_softness: 12
     pos_hint: {"top": 1}
