--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -15,10 +15,12 @@
 
 
 <M3TopAppBar@MDTopAppBar>
+    md_bg_color: app.theme_cls.bg_light
     #size: (app.window.size[0], app.window.size[1] / 10+sp(20))
     anchor_title: "left"
-    title: "KivyMDbook"
-    elevation: 0
+    #title: "KivyMDbook"
+    elevation: 5
+    shadow_softness: 12 # TODO
     pos_hint: {"top": 1}
     left_action_items: [['arrow-left-bold', app.switch_to_main]] # TODO
 
