--- a/view/screens/bottom_nav_screens/lesson_menu.kv
+++ b/view/screens/bottom_nav_screens/lesson_menu.kv
@@ -13,3 +13,36 @@
                     secondary_text: "Шрифт, размер, карандаши, ГОСТ"
                     go_to: "first_steps"
                     #source_to_img: app.path_to("view", "images", "template", ext=".png")
+
+                GoToLessonCard:
+                    text: "Глава 1. Правила черчения"
+                    secondary_text: "Шрифт, размер, карандаши, ГОСТ"
+                    go_to: "first_steps"
+                    #source_to_img: app.path_to("view", "images", "template", ext=".png")
+
+
+                GoToLessonCard:
+                    text: "Глава 1. Правила черчения"
+                    secondary_text: "Шрифт, размер, карандаши, ГОСТ"
+                    go_to: "first_steps"
+                    #source_to_img: app.path_to("view", "images", "template", ext=".png")
+
+
+                GoToLessonCard:
+                    text: "Глава 1. Правила черчения"
+                    secondary_text: "Шрифт, размер, карандаши, ГОСТ"
+                    go_to: "first_steps"
+                    #source_to_img: app.path_to("view", "images", "template", ext=".png")
+
+                GoToLessonCard:
+                    text: "Глава 1. Правила черчения"
+                    secondary_text: "Шрифт, размер, карандаши, ГОСТ"
+                    go_to: "first_steps"
+                    #source_to_img: app.path_to("view", "images", "template", ext=".png")
+
+
+                GoToLessonCard:
+                    text: "Глава 1. Правила черчения"
+                    secondary_text: "Шрифт, размер, карандаши, ГОСТ"
+                    go_to: "first_steps"
+                    #source_to_img: app.path_to("view", "images", "template", ext=".png")
