temp fix for icons at M3TopAppBar

--- a/view/widgets/imagecontainer/imagecontainer.kv
+++ b/view/widgets/imagecontainer/imagecontainer.kv
@@ -29,3 +29,4 @@
         elevation: 5
         shadow_softness: 12
         pos_hint: {"top": 1}
+        specific_text_color: app.get_icon_color()
