--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -23,6 +23,7 @@
     shadow_softness: 12
     pos_hint: {"top": 1}
     left_action_items: [['arrow-left-bold', app.switch_to_main]] # TODO
+    specific_text_color: app.get_icon_color()
 
 
 <M3RecycleView@MDRecycleView>
