experiment with set_bars_color and mobile build

--- a/view/widgets/widgets.kv
+++ b/view/widgets/widgets.kv
@@ -24,7 +24,7 @@
     pos_hint: {"top": 1}
     left_action_items: [['arrow-left-bold', app.switch_to_main]] # TODO
     specific_text_color: app.get_icon_color()
-
+    set_bars_color: True
 
 <M3RecycleView@MDRecycleView>
     size_hint_y: 1
