fix on_touch_down ZoomingImage bug

--- a/view/screens/lessons/first_steps.kv
+++ b/view/screens/lessons/first_steps.kv
@@ -17,6 +17,12 @@
 
                 ZoomingImage:
                     source: app.path_to("view", "images", "random", ext=".jpg")
+
+                ZoomingImage:
+                    source: app.path_to("view", "images", "default", ext=".jpg")
+
+                ZoomingImage:
+                    source: app.path_to("view", "images", "template", ext=".png")
                     
                 M3Label:
                     text: "text![] "*10
